--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "buildCommand": "git submodule update --init --recursive"
+  "buildCommand": "git submodule update --init --recursive && npm run build"
 }
