--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/content"]
 	path = src/content
-	url = https://<GIT_TOKEN>@github.com/Snarl3908/fuwari_pvt_content
+	url = https://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@github.com/Snarl3908/fuwari_pvt_content
