--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
   "buildCommand": "git config --file .gitmodules submodule.src/content.url https://${GIT_TOKEN}@github.com/Snarl3908/fuwari_pvt_content.git && git submodule update --init --recursive && npm run build"
+  "scripts":{
+      "vercel-install": "./vercel-submodule-workaround.sh && yarn --ignore-scripts --production=false",
+    }
 }
