--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/content"]
 	path = src/content
-	url = https://github.com/Snarl3908/fuwari_pvt_content.git
+	url = git@github.com:Snarl3908/fuwari_pvt_content.git
